<resources>
    <string name="app_name">AmconSoftTest</string>
    <string name="facebook_app_id">248262859078258</string>
    <string name="fb_login_protocol_scheme">fb248262859078258</string>
    <string name="fb_login_cancelled">Facebook login cancelled</string>
    <string name="fb_login_error">Facebook login error</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="login_via_facebook">Login with Facebook</string>
    <string name="user_id">user id</string>
    <string name="user_name">user name</string>
    <string name="username">user username</string>
    <string name="email">user email</string>
    <string name="address">user address</string>
    <string name="phone">user phone</string>
    <string name="site">user site</string>
    <string name="company">user company</string>
</resources>
